added UserData form to profile no details tested and works

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -57,6 +57,7 @@ body {
         #user-menu {
         display: flex;
         justify-content: space-around;
+        align-items: center;
         
             img{
                 height: 50px;
