--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -47,6 +47,7 @@ body #nav #logo a:hover {
 body #nav #user-menu {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 body #nav #user-menu img {
   height: 50px;
