--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -574,7 +574,7 @@ body {
         }
 
     img {
-        width: auto;
+        width: 100px;
         height: 100px;
         border-radius: 50px;
 
