--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -597,6 +597,24 @@ body section div .divimg {
   padding: 25px;
   height: 80%;
 }
+@media (max-width: 720px) {
+  body section div .divimg {
+    height: 50%;
+    width: 50%;
+  }
+}
+@media (max-width: 480px) {
+  body section div .divimg {
+    height: 40%;
+    width: 40%;
+  }
+}
+@media (max-width: 370px) {
+  body section div .divimg {
+    height: 20%;
+    width: 20%;
+  }
+}
 body section .links {
   display: flex;
   flex-wrap: wrap;
@@ -650,6 +668,28 @@ body .load img {
   body .load img {
     width: 100px;
   }
+}
+
+.iconNav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  text-align: center;
+  background-color: #ffffff;
+  margin-top: 25px;
+}
+.iconNav div {
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
+}
+.iconNav div img {
+  padding: 10px;
+}
+.iconNav div h2 {
+  text-align: center;
+  color: #00AAFF;
 }
 
 .profile {
