--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -685,24 +685,24 @@ body .load img {
     margin: 10px 0px;
   }
 }
-.profile #greet {
+.profile div #greet {
   font-size: 18px;
   text-align: center;
   margin-top: 20px;
   color: #ff6c2c;
 }
 @media (max-width: 720px) {
-  .profile #greet {
+  .profile div #greet {
     font-size: 16px;
   }
 }
 @media (max-width: 480px) {
-  .profile #greet {
+  .profile div #greet {
     font-size: 14px;
   }
 }
 @media (max-width: 370px) {
-  .profile #greet {
+  .profile div #greet {
     font-size: 12px;
   }
 }
@@ -740,10 +740,14 @@ body .load img {
 .btn-logout {
   background-color: #ff6c2c;
   color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  padding: 10px;
 }
 .btn-logout a a:hover {
   background-color: #ffffff;
   color: #ff6c2c;
+  border: #ff6c2c;
 }
 
 #tables {
