--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -122,7 +122,8 @@ body #meal-log {
   }
 }
 body #meal-log .titles {
-  background-color: #dadada;
+  background-color: #d6d6d6;
+  color: #ff6c2c;
   text-align: center;
   font-size: 16;
 }
@@ -173,6 +174,10 @@ body #meal-log input[type=date i], body #meal-log #total, body #meal-log #add {
   body #meal-log input[type=date i], body #meal-log #total, body #meal-log #add {
     font-size: 10px;
   }
+}
+body #meal-log #list-titles {
+  background-color: #ff6c2c;
+  color: #ffffff;
 }
 body #meal-log #list-titles, body #meal-log #list {
   align-self: flex-start;
@@ -679,9 +684,11 @@ body .load img {
   justify-content: space-around;
   text-align: center;
   margin: 20px 0px;
-  background-color: lightgray;
+  background-color: rgb(221, 221, 221);
   border-radius: 8PX;
   border: none;
+  padding: 25px;
+  width: 400px;
 }
 @media (max-width: 720px) {
   .profile {
@@ -717,10 +724,12 @@ body .load img {
 @media (max-width: 720px) {
   .profile img {
     height: 75px;
+    width: 75x;
   }
 }
 @media (max-width: 360px) {
   .profile img {
+    height: 50px;
     height: 50px;
   }
 }
