--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -140,8 +140,8 @@ body {
         }
 
         .titles {
-            background-color: #d6d6d6;
-            color: $color-primary;
+            background-color: $color-primary;
+            color: #ffffff;
             text-align: center;
             font-size: 16;
 
@@ -188,7 +188,6 @@ body {
             }
         }
         #list-titles{
-            background-color: $color-primary;
             color: #ffffff;
         }
         #list-titles, #list {
@@ -692,10 +691,21 @@ body {
         border-radius: 8PX;
         border: none;
         padding: 25px;
-        width: 400px;
+        width: 350px;
         @media (max-width: 720px) {
-            margin: 10px 0px;
-            
+            margin: 10px 0px; 
+            padding: 20px;
+            width:350px;
+        }
+        @media (max-width: 480px){
+            margin: 10px 0px; 
+            padding: 15px;
+            width:300px;
+        }
+        @media (max-width: 370px){
+            margin: 10px 0px; 
+            padding: 15px;
+            width:300px;
         }
         div{
         #greet {
@@ -725,11 +735,13 @@ body {
         @media (max-width: 720px) {
             height: 75px; //for viewports <= 720px
             width: 75x;
+            border-radius: 37px;
         }
 
         @media (max-width: 360px) {
             height: 50px; // for viewports <= 370px
-            height: 50px
+            height: 50px;
+            border-radius: 25px;
 
         }
     }     
